# ez-appsec

./: .dockerignore  .env.test  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .grype.yaml  .hadolint.yaml  .hadolintignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  CHANGELOG.md  CI_CD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.micro  Dockerfile.semgrep  Dockerfile.slim  GITHUB_PROJECTS.md  LICENSE  Plans.md  QUICKSTART.md  README.md  SECURITY.md  VERSIONING.md  WEB_DASHBOARD.md  build-docker.sh  custom-semgrep-rules.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  scan.yml  setup.py  test_workflow.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
dashboard/: aggregate-index-github.py  gitlab-ci.yml
docs/: 1.md  github-example.md
ez_appsec/: __init__.py  ai_analyzer.py  cli.py  config.py  converters.py  detectors.py  external_scanners.py  php_vuln_scanner.py  php_vuln_scanner_simple.py  reporter.py  scanner.py
gitlab/: dashboard-ci.yml  scan.yml
images/: Dockerfile  Dockerfile.micro  Dockerfile.slim  build-docker.sh  docker-compose.yml  test-compose.yml
infra/: github-self-hosted-runners.md
public/: app.js  index.html
scripts/: aggregate-index.py  github-pipeline-test.sh  gitlab-pipeline-test.sh  mint-token.py  provision.py  push-workflow.sh  resize-lxc-disk.sh  update-index.py
skills/: README.md  install.sh
tests/: test_cli.py  test_config.py  test_converters.py  test_detectors.py  test_github_workflow.py  test_scanner.py
(+51 files in other folders)
